...
    <string name="locked_comment">Locked Comment</string>
    <string name="online_indicator">User is Online</string>
    <string name="badge_icon">Badge Icon</string>
    <string name="badge_awarded">Badge Awarded!</string>
    <string name="close">Close</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="flag_comment">Flag Comment</string>
    <string name="block_user">Block User</string>
    <string name="unblock_user">Unblock User</string>
    <string name="menu_button">Menu Button</string>
    <string name="edit_your_comment">Edit Your Comment</string>
    <string name="save_changes">Save Changes</string>
...
    <string name="user_unblocked_successfully">User unblocked successfully</string>
    <string name="error_unblocking_user">Error unblocking user. Please try again.</string>
    <string name="you_blocked_this_user">You have blocked this user.</string>
    <string name="blocked_user_placeholder">Blocked User</string>
    <string name="delete_comment_title">Delete Comment</string>
    <string name="delete_comment_confirm">Are you sure you want to delete this comment?</string>
    <string name="delete">Delete</string>
    <string name="error_deleting_comment">Error deleting comment. Please try again.</string>
    <string name="comment_deleted_successfully">Comment deleted successfully</string>
    <string name="delete_post_title">Delete Post</string>
    <string name="delete_post_confirm">Are you sure you want to delete this post?</string>
    <string name="error_deleting_post">Error deleting post. Please try again.</string>
    <string name="post_deleted_successfully">Post deleted successfully</string>
...
