...
                        android:layout_marginStart="4dp"
                        android:visibility="gone" />
                </LinearLayout>
                
                <!-- Menu Button -->
                <ImageButton
                    android:id="@+id/commentMenuButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/menu_button"
                    android:src="@drawable/ic_more_vertical"
...
                        android:minWidth="14dp"
                        android:gravity="right"
                        android:paddingEnd="2dp"
                        android:text="@string/vote_count_zero" />
                        
                    <ImageButton
                        android:id="@+id/upVoteButton"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/thumbs_up_selector"
                        android:background="?attr/selectableItemBackgroundBorderless"
...
